--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="My portfolio showcasing my projects, contact details, and video demo.">
     <title>My Portfolio</title>
     <style>
-        /* The General Styles of information i will be inserting on my website page */
+        /* The General Styles of information i will be inserting on my website page !*/
         body {
             font-family: Arial, sans-serif; /*  I Setted the font for the body of my code,meaning the text Styles i want the bio to look like */
             line-height: 1.6;
