--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             padding: 120px 20px 20px;
         }
 
-       /* My Header will be having these styles and colours on the whole website */
+       /* My Header will be having these styles and colours on the whole website k*/
         header {
             background-color: #333; /* I added dark background colour for the header */
             color: #fff;  /*  Then inserted White text colour so it looks appealing to users */
