--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             transition: background-color 0.5s ease-in-out; /*After setting colour to light grey i had insert a the Smooth transition for background colour changes,so it will Excutes my code when is running */
         }
 
-        /* I used this Grid Layout cuz is look professional and catchy,i got it from the presentaion slides in class */
+        /* I used this Grid Layout because is look professional and catchy,i got it from the presentaion slides in class */
         main {
             display: grid;
             grid-template-columns: 1fr;
