Debugging and fixing layout issues

--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
             </div>
 
             <div class="project-item">
-                <img src="ecommerce_platform_payment_integration.png.png" alt="Project 4">
+                <img src="ecommerce_platform_payment_integration.png" alt="Project 4">
                 <h3>Project 4</h3>
                 <p>E-commerce Platform with Payment Integration.</p>
                 <a href="https://yourprojectlink.com" class="btn" target="_blank">Explore</a>
