Updated CSS for mobile responsiveness using media queries

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
     @media (max-width: 768px) { /* When i want view my contact page on the Mobile phone or other device,having width to 768px will make it Responsive for small devices etc. */
       /* Show hamburger icon, hide normal nav by default */
       #menu-toggle {
-        display: block;
+        display: block; 
       }
 
       /* I Turned the UL into a slide-out overlay from the right */
@@ -561,7 +561,7 @@
             </div>
 
             <div class="project-item">
-                <img src="ecommerce_platform_payment_integration.png.png" alt="Project 4">
+                <img src="ecommerce_platform_payment_integration.png" alt="Project 4">
                 <h3>Project 4</h3>
                 <p>E-commerce Platform with Payment Integration.</p>
                 <a href="https://yourprojectlink.com" class="btn" target="_blank">Explore</a>
