Added homepage structure with navbar

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             transition: background-color 0.5s ease-in-out; /*After setting colour to light grey i had insert a the Smooth transition for background colour changes,so it will Excutes my code when is running */
         }
 
-        /* I used this Grid Layout cuz is look professional and catchy,i got it from the presentaion slides in class */
+        /* I used this Grid Layout because is look professional and catchy,i got it from the presentaion slides in class */
         main {
             display: grid;
             grid-template-columns: 1fr;
@@ -66,7 +66,7 @@
       - The UL is positioned  on mobile as a slide-out menu.
       - On desktop, it stays inline so it doesnt overlap the navigation bar (to the right).
     */
-       .nav-right ul {
+       .nav-right ul { 
           display: flex;
           list-style: none;
           gap: 20px;
@@ -334,7 +334,7 @@
     @media (max-width: 768px) { /* When i want view my contact page on the Mobile phone or other device,having width to 768px will make it Responsive for small devices etc. */
       /* Show hamburger icon, hide normal nav by default */
       #menu-toggle {
-        display: block;
+        display: block; 
       }
 
       /* I Turned the UL into a slide-out overlay from the right */
@@ -561,7 +561,7 @@
             </div>
 
             <div class="project-item">
-                <img src="ecommerce_platform_payment_integration.png.png" alt="Project 4">
+                <img src="ecommerce_platform_payment_integration.png" alt="Project 4">
                 <h3>Project 4</h3>
                 <p>E-commerce Platform with Payment Integration.</p>
                 <a href="https://yourprojectlink.com" class="btn" target="_blank">Explore</a>
